# message-board

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  leptosfmt.toml
.sqlx/: query-176593387d0f4d9c4cbedc32e9496d814169e46b6fb4ca9aebd44b8bbc0897fd.json  query-2933f5e3eb294f18c5fa1e680def02874375d31c39b1b1d2ccc71b159455b8d1.json  query-3232c2c618258ea7e855e12976c106c7957676aa87f333fc04e6d37a8789ec21.json  query-328b70abdc8d10684f030a684939011e3479c4e8103de3db0b7aaa5f813f4bfd.json  query-3b33410ebd40215aa39e85ad336f4fbdfd766d11e9b87eb7ec010cf546b431df.json  query-40721c37610f1d18d5c657cce26db7e22857971e8eca7081043e56cb1d75fe9a.json  query-461088c53db1daee47c353a306239591d7996484cee3ff5031c5a59273adc1b8.json  query-4afa783e15d5b95cc461b20e3fe48a7d65882d9b40698f17edf68fe35386ef0a.json  query-514a6df3d762b4a91ea128d701a4375e7ae932c59b36a59a208ce7654ae18ece.json  query-52708d86172d3c55b23f29c0d5c796c6743cd2d17465bfd17247e399d2fef60b.json  query-52928e9f0f7b56300784e4906312213b5fb7969d55bb9477cb9f1d2dbc0a9b78.json  query-59efdc621e7f71243d68bc06b370f86a94de3a89932fa98e87b029d4a0ae3da3.json  query-5b76393051a3ce847cc92a3811277c351cdabf2f570b4d4223b3d80f33d6a1b3.json  query-619aa7f7b4ba577bb59facb7b39640ac097012fbcd12840ef34486f47d2533de.json  query-61e73c25439ccaf12131edc770c35469d04c50a6d6eb7cd89b57093ec95e2ec3.json  query-6aaef45ba59fb62e0d0a9fb49ed6707044914025405eed9f6763b38ab5a5a99e.json  query-7a3373b1e42f3bb68e8911a71babede3a68ad286048c23b99f4d18ad0ab39fa9.json  query-92c383633f2845e554fb3fb6d136505f977c0ba68622775cd780e60001a8433a.json  query-956a573240c21a5c5ef8264d3cb85a9c52ebe1c21e2a6ac2b6dcf15c65fee747.json  query-9d63dd9e58e8b316ee2812abb62c11735e07441520938ced96b3ee8537018840.json  query-a15f3be5196c72e97697cf6b195d78ffd9726874b83f20e5b7dcb939ecfe06c1.json  query-ca3fadffbd544f2ddbc8b1fb02c01158a136e61a0e57de0a4a0a1ef8c46a0aae.json  query-ca7b2fb8f3696f0c1a1bb93a45c135dfe4c5dac996edf6b961ee99dbda88fdc6.json  query-d989850ffb93eb7a57dabdb37abbcdf4b6ad9f83224436e54a0fe8b99ec5e91e.json  query-e9b0880a53ca7c9b1825f276b2b5b25281a62dea2adeea0f3015bc6d34724145.json  query-f35463bb18a14b754199085d7837d849ae89e1e4470f93396c76141e7f6937f2.json  query-ffcf1f1d8d932bbf8344c3395e36124fb2ab47d388b7b8c33b947f79643bcd3c.json
assets/: admin-script.js  all_english_words_clean.txt  script.js  ts.css  user-script.js  vue.global.prod.js
migrations/: 20241203172328_locations.up.sql  20241204235242_fingerprints.up.sql  20241204235242_users.up.sql  20241204235302_messages.down.sql  20241204235302_messages.up.sql  20241204235942_fingerprints.down.sql  20241204235942_fingerprints.up.sql  20241207172328_locations.up.sql
public/: index.css
src/: admin_controller.rs  app.rs  censor.rs  controller.rs  lib.rs  main.rs  messages.rs  random_codes.rs  user.rs  util.rs  ws.rs
templates/: admin-messages.askama.html  admin-messages.vue  index.askama.html  messages.askama.html  messages.component.askama.html  user-messages.askama.html
tools/: fingerprinting.html
tools/domain-scraper/: b.js  c.js  t.js
tools/posters/4 FRIENDSHIP/: fs.psd
tools/r-printer/: Cargo.toml  build.sh
tools/r-printer/src/: main.rs
