[package]
name = "message-board"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9" }
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
serde = { version = "1.0.215" }
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "migrate", "runtime-tokio", "runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
anyhow = "1.0.94"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
askama = { version = "0.12.1" }
base64 = "0.22.1"
rustrict = "0.7.33"
minify-html = "0.15.0"
