[package]
name = "message-board"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["original-uri"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
serde = { version = "1.0.215" }
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "migrate", "runtime-tokio", "runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
anyhow = "1.0.94"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
askama = { version = "0.12.1" }
base64 = "0.22.1"
rustrict = "0.7.33"
minify-html = "0.15.0"
rand = "0.8.5"
ammonia = "4.0.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[lints.clippy]
all = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "warn"
nursery = "warn"
module-name-repetitions = { level = "allow", priority = 30 }
declare-interior-mutable-const = { level = "allow", priority = 30 }
borrow-interior-mutable-const = { level = "allow", priority = 30 }

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
nonstandard-style = "warn"