[package]
name = "message-board"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.0-rc.1", features = ["original-uri", "ws"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
serde = { version = "1.0.215" }
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "migrate", "runtime-tokio", "runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
anyhow = "1.0.94"
dotenvy = "0.15.7"
chrono = { version = "0.4.39", features = ["serde"] }
askama = "0.12.1"
base64 = "0.22.1"
rustrict = "0.7.33"
minify-html = "0.15.0"
rand = "0.9.0-beta.1"
ammonia = "4.0.0"
tokio-util = { version = "0.7.13", features = ["codec"] }
futures = "0.3.31"
serde_json = "1.0.133"
cbc = { version = "0.1.2", features = ["alloc", "block-padding"] }
aes = "0.8.4"

[profile.dev.package.sqlx-macros]
opt-level = 3

[build-dependencies]
base64 = "0.22.1"
rand = "0.9.0-beta.1"

[lints.clippy]
all = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "warn"
nursery = "warn"
module-name-repetitions = { level = "allow", priority = 30 }
declare-interior-mutable-const = { level = "allow", priority = 30 }
borrow-interior-mutable-const = { level = "allow", priority = 30 }

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
nonstandard-style = "warn"
